<resources>
    <string name="app_name">Score Keeper</string>
    <string name="flames_of_bellydance">Flames of Bellydance</string>
    <string name="zero">0</string>
    <string name="technique">Technique</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="choreography">Choreography</string>
    <string name="appearance">Appearance</string>
    <string name="synchronization">Synchronization</string>
    <string name="formations">Formations</string>
    <string name="sirin_tribe">Sirin Tribe</string>
    <string name="reset">Reset</string>
</resources>
