<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dancer2"
    android:orientation="vertical"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/TeamLinearLayout">

            <TextView
                style="@style/TextTeamName"
                android:text="@string/flames_of_bellydance" />

            <TextView
                android:id="@+id/flames_score"
                style="@style/TextScoreField"
                android:text="@string/zero" />

            <TextView
                style="@style/TextCategoryName"
                android:text="@string/technique" />

            <LinearLayout style="@style/ButtonsLinearLayout">

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addThreeForFlames"
                    android:text="@string/three" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForFlames"
                    android:text="@string/two" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForFlames"
                    android:text="@string/one" />
            </LinearLayout>

            <TextView
                style="@style/TextCategoryName"
                android:text="@string/choreography" />

            <LinearLayout style="@style/ButtonsLinearLayout">

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addThreeForFlames"
                    android:text="@string/three" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForFlames"
                    android:text="@string/two" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForFlames"
                    android:text="@string/one" />
            </LinearLayout>

            <TextView
                style="@style/TextCategoryName"
                android:text="@string/appearance" />

            <LinearLayout style="@style/ButtonsLinearLayout">

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addThreeForFlames"
                    android:text="@string/three" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForFlames"
                    android:text="@string/two" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForFlames"
                    android:text="@string/one" />
            </LinearLayout>

            <TextView
                style="@style/TextCategoryName"
                android:text="@string/synchronization" />

            <LinearLayout style="@style/ButtonsLinearLayout">

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addThreeForFlames"
                    android:text="@string/three" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForFlames"
                    android:text="@string/two" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForFlames"
                    android:text="@string/one" />
            </LinearLayout>

            <TextView
                style="@style/TextCategoryName"
                android:text="@string/formations" />

            <LinearLayout style="@style/ButtonsLinearLayout">

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addThreeForFlames"
                    android:text="@string/three" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForFlames"
                    android:text="@string/two" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForFlames"
                    android:text="@string/one" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/VerticalLine" />

        <LinearLayout style="@style/TeamLinearLayout">

            <TextView
                style="@style/TextTeamName"
                android:text="@string/sirin_tribe" />

            <TextView
                android:id="@+id/sirin_score"
                style="@style/TextScoreField"
                android:text="@string/zero" />

            <TextView
                style="@style/TextCategoryName"
                android:text="Technique" />

            <LinearLayout style="@style/ButtonsLinearLayout">

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addThreeForSirin"
                    android:text="@string/three" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForSirin"
                    android:text="@string/two" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForSirin"
                    android:text="@string/one" />
            </LinearLayout>

            <TextView
                style="@style/TextCategoryName"
                android:text="@string/choreography" />

            <LinearLayout style="@style/ButtonsLinearLayout">

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addThreeForSirin"
                    android:text="@string/three" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForSirin"
                    android:text="@string/two" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForSirin"
                    android:text="@string/one" />
            </LinearLayout>

            <TextView
                style="@style/TextCategoryName"
                android:text="@string/appearance" />

            <LinearLayout style="@style/ButtonsLinearLayout">

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addThreeForSirin"
                    android:text="@string/three" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForSirin"
                    android:text="@string/two" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForSirin"
                    android:text="@string/one" />
            </LinearLayout>

            <TextView
                style="@style/TextCategoryName"
                android:text="@string/synchronization" />

            <LinearLayout style="@style/ButtonsLinearLayout">

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addThreeForSirin"
                    android:text="@string/three" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForSirin"
                    android:text="@string/two" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForSirin"
                    android:text="@string/one" />
            </LinearLayout>

            <TextView
                style="@style/TextCategoryName"
                android:text="@string/formations" />

            <LinearLayout style="@style/ButtonsLinearLayout">

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addThreeForSirin"
                    android:text="@string/three" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addTwoForSirin"
                    android:text="@string/two" />

                <Button
                    style="@style/ScoreButton"
                    android:onClick="addOneForSirin"
                    android:text="@string/one" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/ResetButton"
        android:onClick="resetScore"
        android:text="@string/reset" />
</LinearLayout>